@@ -1,7 +1,6 @@
 package com.depromeet.breadmapbackend.domain.admin.bakery;
 
 import com.depromeet.breadmapbackend.domain.admin.Admin;
-import com.depromeet.breadmapbackend.domain.admin.bakery.AdminBakeryImageType;
 import com.depromeet.breadmapbackend.domain.admin.bakery.dto.BakeryAddRequest;
 import com.depromeet.breadmapbackend.domain.admin.bakery.dto.BakeryUpdateRequest;
 import com.depromeet.breadmapbackend.domain.admin.bakery.dto.ProductAddImageRegisterRequest;
@@ -78,16 +77,16 @@ class AdminBakeryControllerTest extends ControllerTest {
 
         List<FacilityInfo> facilityInfo = Collections.singletonList(FacilityInfo.PARKING);
         bakery = Bakery.builder().id(1L).address("address").latitude(37.5596080725671).longitude(127.044235133983)
-                .facilityInfoList(facilityInfo).name("bakery").status(BakeryStatus.POSTING).build();
+                .facilityInfoList(facilityInfo).name("bakery").status(BakeryStatus.POSTING)
+                .image(customAWSS3Properties.getCloudFront() + "/" + "bakeryImage.jpg").build();
         bakeryRepository.save(bakery);
-        bakery.updateImage(customAWSS3Properties.getCloudFront() + "/" + "bakeryImage.jpg");
         s3Uploader.upload(
                 new MockMultipartFile("image", "bakeryImage.jpg", "image/jpg", "test".getBytes()),
                 "bakeryImage.jpg");
 
-        product = Product.builder().bakery(bakery).productType(ProductType.BREAD).name("bread1").price("3000").build();
+        product = Product.builder()
+                .bakery(bakery).productType(ProductType.BREAD).name("bread1").price(3000).image(customAWSS3Properties.getCloudFront() + "/" + "productImage.jpg").build();
         productRepository.save(product);
-        product.updateImage(customAWSS3Properties.getCloudFront() + "/" + "productImage.jpg");
 
         bakeryUpdateReport = BakeryUpdateReport.builder()
                 .bakery(bakery).user(user).reason(BakeryUpdateReason.BAKERY_SHUTDOWN).content("content").build();
@@ -277,7 +276,7 @@ class AdminBakeryControllerTest extends ControllerTest {
                 .instagramURL("insta").facebookURL("facebook").blogURL("blog").websiteURL("website").phoneNumber("010-1234-5678")
                 .facilityInfoList(facilityInfo).status(BakeryStatus.POSTING).productList(Arrays.asList(
                         BakeryAddRequest.ProductAddRequest.builder()
-                                .productType(ProductType.BREAD).productName("testBread").price("12000")
+                                .productType(ProductType.BREAD).productName("testBread").price(12000)
                                 .image("tempImage.jpg").build()
                 )).build());
 
@@ -325,9 +324,9 @@ class AdminBakeryControllerTest extends ControllerTest {
                 .facilityInfoList(facilityInfo).status(BakeryStatus.POSTING).productList(Arrays.asList(
                         BakeryUpdateRequest.ProductUpdateRequest.builder()
                                 .productId(product.getId()).productType(ProductType.BREAD)
-                                .productName("testBread").price("12000").image("tempImage.jpg").build(),//,
+                                .productName("testBread").price(12000).image("tempImage.jpg").build(),//,
                         BakeryUpdateRequest.ProductUpdateRequest.builder()
-                                .productType(ProductType.BREAD).productName("newBread").price("10000").build()
+                                .productType(ProductType.BREAD).productName("newBread").price(10000).build()
                 )).build());
 
         mockMvc.perform(patch("/v1/admin/bakeries/{bakeryId}", bakery.getId())
@@ -353,7 +352,7 @@ class AdminBakeryControllerTest extends ControllerTest {
                                 fieldWithPath("websiteURL").description("빵집 홈페이지"),
                                 fieldWithPath("phoneNumber").description("빵집 전화번호"),
                                 fieldWithPath("facilityInfoList.[]").description("빵집 정보"),
-                                fieldWithPath("productList.[].productId").optional().description("상품 고유 번호 (새로운 빵 추가시 제외)"),
+                                fieldWithPath("productList.[].productId").optional().description("상품 고유 번호 (새로운 빵이면 null)"),
                                 fieldWithPath("productList.[].productType").description("상품 타입 (BREAD, BEVERAGE, ETC 중 하나"),
                                 fieldWithPath("productList.[].productName").description("상품 이름"),
                                 fieldWithPath("productList.[].price").description("상품 가격"),
@@ -468,7 +467,7 @@ class AdminBakeryControllerTest extends ControllerTest {
     @Test
     void registerProductAddImage() throws Exception {
         String object = objectMapper.writeValueAsString(ProductAddImageRegisterRequest.builder()
-                .imageIdList(Arrays.asList(productAddReportImage1.getId(), productAddReportImage2.getId())).build());
+                .imageIdList(List.of(productAddReportImage1.getId(), productAddReportImage2.getId())).build());
 
         mockMvc.perform(patch("/v1/admin/bakeries/{bakeryId}/product-add-reports/{reportId}", bakery.getId(), productAddReport.getId())
                         .header("Authorization", "Bearer " + token.getAccessToken())
